--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,15 @@ input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
 
-@media only screen and (max-width: 340px) {
+@media only screen and (max-width: 355px) {
+  .arrivals-img {
+    height: 300px !important;
+  }
+  .arrival-btn {
+    font-size: 14px !important;
+    height: 35px !important;
+    width: 145px !important;
+  }
   .info-text p {
     font-size: 12px !important;
   }
@@ -28,6 +36,12 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 }
 
+@media only screen and (min-width: 355px) and (max-width: 395px) {
+  .arrivals-img {
+    height: 335px !important;
+  }
+}
+
 @media only screen and (max-width: 425px) {
   .nav-user-list {
     margin: 0 !important;
@@ -47,6 +61,9 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media only screen and (min-width: 395px) and (max-width: 510px) {
+  .arrivals-img {
+    height: 435px !important;
+  }
   .violet-box,
   .yellow-box,
   .purple-box {
@@ -70,6 +87,12 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media only screen and (min-width: 510px) and (max-width: 768px) {
+  .menu-box {
+    width: 516px !important;
+  }
+  .arrivals-img {
+    height: 485px !important;
+  }
   .violet-box,
   .yellow-box,
   .purple-box {
@@ -88,7 +111,24 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 }
 
+@media only screen and (max-width: 768px) {
+  .arrivals-container {
+    padding: 0 15px !important;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 992px) {
+  .menu-box {
+    width: 696px !important;
+  }
+  .arrivals-img {
+    height: 200px !important;
+  }
+  .arrival-btn {
+    font-size: 14px !important;
+    height: 35px !important;
+    width: 145px !important;
+  }
   .violet-box,
   .yellow-box,
   .purple-box {
@@ -173,6 +213,19 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .menu-box {
+    width: 936px !important;
+  }
+  .arrivals-img {
+    height: 200px !important;
+  }
+  .card-text {
+    font-size: 10px !important;
+    margin: 0 !important;
+  }
+  .card-title {
+    font-size: 14px !important;
+  }
   .my-modal-content {
     width: 38% !important;
   }
@@ -202,6 +255,12 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
+  .menu-box {
+    width: 1116px !important;
+  }
+  .arrivals-img {
+    height: 230px !important;
+  }
   .my-modal-content {
     width: 33% !important;
   }
@@ -214,10 +273,6 @@ input[type="search"]::-webkit-search-results-decoration {
     height: 455px !important;
     padding: 100px 0px 100px 450px !important;
   }
-}
-
-.owl-nav {
-  display: none;
 }
 
 ul,
@@ -562,48 +617,99 @@ main .arrivals-back .arrivals-container .name-of-sect {
   text-align: center;
 }
 
-main .arrivals-back .arrivals-container .arrivals-img {
+main .arrivals-back .arrivals-container .second-slider {
+  position: relative;
+}
+
+main .arrivals-back .arrivals-container .second-slider .owl-nav {
+  position: absolute;
+}
+
+main .arrivals-back .arrivals-container .second-slider .owl-nav .owl-prev {
+  position: absolute;
+}
+
+main .arrivals-back .arrivals-container .second-slider .arrivals-img {
   height: 290px;
-  background-image: url("../img/Skin_Mergency_Treatment_Set_Carton_Front__58833.jpg");
   background-repeat: no-repeat;
   background-size: contain;
 }
 
-main .arrivals-back .arrivals-container .arrivals-img:hover {
+main .arrivals-back .arrivals-container .second-slider .arrivals-img span {
+  padding: 3px 8px;
+  background-color: #F5EA77;
+  color: #333;
+}
+
+main .arrivals-back .arrivals-container .second-slider .img-1 {
+  background-image: url("../img/Skin_Mergency_Treatment_Set_Carton_Front__58833.jpg");
+}
+
+main .arrivals-back .arrivals-container .second-slider .img-1:hover {
   background-image: url("../img/Skin_Mergency_Lactic_Acid_PINK_SWATCH_A__21458.jpg");
 }
 
-main .arrivals-back .arrivals-container .card-body {
-  text-align: center;
-  padding: 0 0 15px 0;
+main .arrivals-back .arrivals-container .second-slider .img-2 {
+  background-image: url("../img/KP_Skin_Smoothing_Body_Butter__13368.jpg");
 }
 
-main .arrivals-back .arrivals-container .card-body .rating {
+main .arrivals-back .arrivals-container .second-slider .img-2:hover {
+  background-image: url("../img/KP_Skin_Smoothing_Body_Butter_Swatch_A__26980.webp");
+}
+
+main .arrivals-back .arrivals-container .second-slider .img-3 {
+  background-image: url("../img/Mighty_Biome_Moisturizer_Concentrate_Front__50376.webp");
+}
+
+main .arrivals-back .arrivals-container .second-slider .img-3:hover {
+  background-image: url("../img/Mighty_Biome_Moisturizer_Concentrate_Swatch_A__27977.webp");
+}
+
+main .arrivals-back .arrivals-container .second-slider .img-4 {
+  background-image: url("../img/Mighty_Biome_Toner_Front__30153.webp");
+}
+
+main .arrivals-back .arrivals-container .second-slider .img-4:hover {
+  background-image: url("../img/Mighty_Biome_Toner_Swatch_A__13604.webp");
+}
+
+main .arrivals-back .arrivals-container .second-slider .card-body {
+  text-align: center;
+  height: 190px;
+  padding: 0 0 15px 0;
+  position: relative;
+}
+
+main .arrivals-back .arrivals-container .second-slider .card-body .rating {
   margin-bottom: 8px;
 }
 
-main .arrivals-back .arrivals-container .card-body .rating .fa-heart {
+main .arrivals-back .arrivals-container .second-slider .card-body .rating .fa-heart {
   color: #73D2E6;
 }
 
-main .arrivals-back .arrivals-container .card-body .rating .my-heart {
+main .arrivals-back .arrivals-container .second-slider .card-body .rating .my-heart {
   color: #D7D7D7;
 }
 
-main .arrivals-back .arrivals-container .card-body .card-title {
+main .arrivals-back .arrivals-container .second-slider .card-body .card-title {
   font-size: 16px;
   line-height: 17px;
   font-weight: 600;
   color: #333;
 }
 
-main .arrivals-back .arrivals-container .card-body .card-text {
+main .arrivals-back .arrivals-container .second-slider .card-body .card-text {
   font-size: 13px;
   line-height: 15px;
   margin-top: 8px;
 }
 
-main .arrivals-back .arrivals-container .card-body .arrival-btn {
+main .arrivals-back .arrivals-container .second-slider .card-body .arrival-btn {
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: 20px;
   height: 40px;
   width: 180px;
   border: none;
@@ -614,7 +720,7 @@ main .arrivals-back .arrivals-container .card-body .arrival-btn {
           box-shadow: 3px 3px 0 #f5ea77;
 }
 
-main .arrivals-back .arrivals-container .card-body .arrival-btn:hover {
+main .arrivals-back .arrivals-container .second-slider .card-body .arrival-btn:hover {
   -webkit-box-shadow: 3px 3px 0 #fdb1be;
           box-shadow: 3px 3px 0 #fdb1be;
   background-color: #948AD3;
